test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-shared-from-oknil-unmanaged.good
init-field-dflt-nonnil-shared-from-oknil-unmanaged.chpl:8: error: Cannot initialize lhs of non-nilable type 'shared MyClass' from a nilable 'unmanaged MyClass?'
